@@ -28,8 +28,10 @@ class Theme(ThemeBase):
             self.logo(),
             self.searchform(d),
             self.username(d),
+            u'<div id="locationline">',
             self.interwiki(d),
             self.title(d),
+            u'</div>',
             self.trail(d),
             self.navibar(d),
             #u'<hr id="pageline">',
